# rnotes-app

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER.md  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/workflows/: release.yml
docs/: PROJECT.md  ROADMAP.md
docs/research/: 001-data-storage-architecture.md
e2e/: code-block-autodetect.spec.ts  code-blocks-collapsible.spec.ts  context-menu.spec.ts  drag-reorder.spec.ts  editor-layout.spec.ts  editor-shortcuts.spec.ts  editor-toolbar.spec.ts  emoji-paste.spec.ts  error-handling.spec.ts  export-note.spec.ts  folder-indicator.spec.ts  image-embedding.spec.ts  image-resize.spec.ts  keyboard-shortcuts.spec.ts  link-handling.spec.ts  markdown-shortcuts.spec.ts  paste-code-block.spec.ts  paste-handling.spec.ts  search-ux.spec.ts  search.spec.ts  settings.spec.ts  sidebar-tree.spec.ts  spreadsheet.spec.ts  table-context-menu.spec.ts  table-support.spec.ts  task-due-dates.spec.ts  task-lists.spec.ts  task-overview.spec.ts  title-sync.spec.ts  toc-and-links.spec.ts
e2e/fixtures/: tauri-mock.ts
prompts/completed/: 001-research-data-storage-architecture.md  002-create-project-plan-and-tasks.md
scripts/: render-icon.mjs  set-version.mjs
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: assets.rs  backup.rs  config_commands.rs  export_commands.rs  mod.rs  note_commands.rs  spreadsheet_commands.rs  task_commands.rs
src-tauri/src/db/: assets.rs  fts.rs  mod.rs  notes.rs  schema.rs  tasks.rs  test_helpers.rs
src-tauri/src/services/: assets.rs  backup_service.rs  config_service.rs  export_service.rs  mod.rs  note_service.rs  notification_service.rs  spreadsheet_service.rs  task_service.rs
src/components/: ContentArea.tsx  GlobalFindReplace.tsx  GlobalSearch.tsx  KeyboardShortcutsDialog.module.css  KeyboardShortcutsDialog.tsx  RecoveryDialog.tsx  Settings.module.css  Settings.tsx  Sidebar.tsx  TaskOverview.module.css  (+1 more)
(+52 files in other folders)
