[package]
name = "rnotes-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "rnotes_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
thiserror = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
